--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -367,7 +367,6 @@
     <Compile Include="CsvClassMaps\ReportVacanciesResultItemClassMap.cs" />
     <Compile Include="CsvClassMaps\ReportVacancyExtensionsResultItemClassMap.cs" />
     <Compile Include="IoC\VacancySourceRegistry.cs" />
-    <Compile Include="Mappers\CandidateMappers.cs" />
     <Compile Include="Mediators\AgencyUser\AgencyUserMediator.cs" />
     <Compile Include="Mediators\AgencyUser\AgencyUserMediatorCodes.cs" />
     <Compile Include="Mediators\AgencyUser\IAgencyUserMediator.cs" />
@@ -391,17 +390,12 @@
     <Compile Include="Mediators\Vacancy\VacancyMediator.cs" />
     <Compile Include="Mediators\Vacancy\VacancyMediatorCodes.cs" />
     <Compile Include="Providers\AgencyUserProvider.cs" />
-    <Compile Include="Providers\CandidateProvider.cs" />
-    <Compile Include="Providers\ICandidateProvider.cs" />
     <Compile Include="ViewModels\AgencyUserViewModel.cs" />
     <Compile Include="Providers\IAgencyUserProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\CandidateApplicationsViewModel.cs" />
     <Compile Include="ViewModels\CandidateVacancy.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
-    <Compile Include="ViewModels\CandidateApprenticeshipApplicationViewModel.cs" />
-    <Compile Include="ViewModels\CandidateTraineeshipApplicationViewModel.cs" />
     <Compile Include="ViewModels\InformationRadiatorViewModel.cs" />
     <Compile Include="ViewModels\ReportMenu.cs" />
     <Compile Include="ViewModels\ReportUnsuccessfulCandidatesParameters.cs" />
@@ -882,6 +876,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Mappers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
