--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -198,6 +198,7 @@
     <Compile Include="CsvClassMaps\ApplicationsReceivedResultItemClassMap.cs" />
     <Compile Include="Extensions\VacancyDatesViewModelExtensions.cs" />
     <Compile Include="Extensions\HtmlExtensions.cs" />
+    <Compile Include="Mappers\CandidateMappers.cs" />
     <Compile Include="Mappers\RaaCommonWebMappers.cs" />
     <Compile Include="Mappers\Resolvers\VacancyToVacancyDatesViewModelConverter.cs" />
     <Compile Include="Mappers\Resolvers\VacancyToFurtherVacancyDetailsViewModelConverter.cs" />
@@ -207,8 +208,10 @@
     <Compile Include="Mappers\Resolvers\NullableIntToNullableDecimalResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationProvider.cs" />
+    <Compile Include="Providers\CandidateProvider.cs" />
     <Compile Include="Providers\GeoCodeAddressResult.cs" />
     <Compile Include="Providers\GeoCodingProvider.cs" />
+    <Compile Include="Providers\ICandidateProvider.cs" />
     <Compile Include="Providers\IGeoCodingProvider.cs" />
     <Compile Include="Providers\IReportingProvider.cs" />
     <Compile Include="Providers\IVacancyManagementProvider.cs" />
@@ -235,6 +238,8 @@
     <Compile Include="Providers\VacancyStatusChangeProvider.cs" />
     <Compile Include="Validators\Application\TraineeshipApplicationViewModelValidator.cs" />
     <Compile Include="Validators\Application\ApprenticeshipApplicationViewModelValidator.cs" />
+    <Compile Include="ViewModels\Candidate\CandidateApplicationsViewModel.cs" />
+    <Compile Include="ViewModels\Candidate\CandidateApprenticeshipApplicationViewModel.cs" />
     <Compile Include="ViewModels\Candidate\CandidateSummaryViewModel.cs" />
     <Compile Include="ViewModels\Candidate\CandidateSearchResultsViewModel.cs" />
     <Compile Include="Validators\Candidate\CandidateSearchResultsViewModelValidator.cs" />
@@ -280,6 +285,7 @@
     <Compile Include="ViewModels\Application\VacancyQuestionAnswersViewModel.cs" />
     <Compile Include="ViewModels\Application\WorkExperienceViewModel.cs" />
     <Compile Include="ViewModels\Candidate\CandidateSearchViewModel.cs" />
+    <Compile Include="ViewModels\Candidate\CandidateTraineeshipApplicationViewModel.cs" />
     <Compile Include="ViewModels\Order.cs" />
     <Compile Include="ViewModels\OrderedPageableSearchViewModel.cs" />
     <Compile Include="ViewModels\OrderedSearchViewModel.cs" />
