--- a/static/avms-helppage/Web.config
+++ b/static/avms-helppage/Web.config
@@ -19,7 +19,49 @@
 	</location>	
     <system.webServer>
 		<!--<httpRedirect enabled="true" destination="/index.html" exactDestination="true" httpResponseStatus="Permanent" />		-->
-		<httpRedirect enabled="true" destination="" httpResponseStatus="Permanent" />
+		<!--<httpRedirect enabled="true" destination="" httpResponseStatus="Permanent" />-->
+        <rewrite>
+            <rules>
+				<clear />
+			   <rule name="Redirect asmx" stopProcessing="true">
+				  <match url="(.*).asmx"/>
+				  <action type="Redirect" url="{R:1}" redirectType="Permanent"/>
+				</rule>					
+			   <rule name="Redirect svc" stopProcessing="true">
+				  <match url="(.*).svc"/>
+				  <action type="Redirect" url="{R:1}" redirectType="Permanent"/>
+				</rule>					
+			   <rule name="Redirect aspx" stopProcessing="true">
+				  <match url="(.*).aspx"/>
+				  <action type="Redirect" url="{R:1}" redirectType="Permanent"/>
+				</rule>								
+			   <!--<rule name="Redirect to https and azurewebsites.net" stopProcessing="true">
+				  <match url=".*"/>
+				  <conditions logicalGrouping="MatchAny">
+					<add input="{HTTPS}" pattern="off" ignoreCase="true"/>
+					<add input="{HTTP_HOST}" pattern="^azurewebsites.net$" />
+				  </conditions>
+				  <action type="Redirect" url="https://{R:1}/{R:0}" redirectType="Permanent"/>
+				  <action type="Redirect" url="https://avms-helppage.azurewebsites.net/{R:0}" redirectType="Permanent"/>
+				</rule>-->
+			   <!--<rule name="Redirect www.apprenticeshipvacancymatchingservice.lsc.gov.uk" stopProcessing="true">
+				  <match url="^www.$"/>
+				  <conditions logicalGrouping="MatchAny">
+					<add input="{HTTP_HOST}" pattern="^www.apprenticeshipvacancymatchingservice.lsc.gov.uk$" />
+				  </conditions>
+				  <action type="Redirect" url="https://{R:1}/{R:0}" redirectType="Permanent"/>
+				  <action type="Redirect" url="http://www.apprenticeshipvacancymatchingservice.lsc.gov.uk/{R:0}" redirectType="Permanent"/>
+				</rule>-->		
+			   <!--<rule name="Redirect to https and apprenticeshipvacancymatchingservice.lsc.gov.uk" stopProcessing="true">
+				  <match url=".*"/>
+				  <conditions logicalGrouping="MatchAny">
+					<add input="{HTTPS}" pattern="off" ignoreCase="true"/>
+					<add input="{HTTP_HOST}" pattern="^apprenticeshipvacancymatchingservice.lsc.gov.uk$" />
+				  </conditions>
+				  <action type="Redirect" url="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/{R:0}" redirectType="Permanent"/>
+				</rule>						-->
+			</rules>
+        </rewrite>		
         <httpErrors errorMode="Custom">
             <remove statusCode="404" subStatusCode="-1" />
             <error statusCode="404" prefixLanguageFilePath="" path="/index.html" responseMode="ExecuteURL" />
