Application counts from SQL rather than Mongo

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Candidates\SavedSearch.cs" />
     <Compile Include="Candidates\SavedSearchHelper.cs" />
     <Compile Include="Candidates\TrainingCourse.cs" />
+    <Compile Include="Collections\Generic\SparseDictionary.cs" />
     <Compile Include="Communication\ProviderContactMessage.cs" />
     <Compile Include="Communication\ContactMessageTypes.cs" />
     <Compile Include="Communication\SavedSearchAlert.cs" />
