Added axd file extension

--- a/static/avms-helppage/Web.config
+++ b/static/avms-helppage/Web.config
@@ -35,6 +35,10 @@
 				  <match url="(.*).aspx"/>
 				  <action type="Redirect" url="{R:1}" redirectType="Permanent"/>
 				</rule>								
+			   <rule name="Redirect axd" stopProcessing="true">
+				  <match url="(.*).axd"/>
+				  <action type="Redirect" url="{R:1}" redirectType="Permanent"/>
+				</rule>							
 			   <!--<rule name="Redirect to https and azurewebsites.net" stopProcessing="true">
 				  <match url=".*"/>
 				  <conditions logicalGrouping="MatchAny">
