--- a/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
+++ b/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
@@ -96,6 +96,7 @@
     <Compile Include="IAllVacanciesProvider.cs" />
     <Compile Include="IVacancyManagementService.cs" />
     <Compile Include="IVacancySearchProvider.cs" />
+    <Compile Include="IVacancySummaryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteMap\ISiteMapVacancyProvider.cs" />
     <Compile Include="SiteMap\SiteMapVacancy.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="VacancyManagementService.cs" />
     <Compile Include="VacancyManagementServiceCodes.cs" />
     <Compile Include="VacancySearchService.cs" />
+    <Compile Include="VacancySummaryService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
