--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -177,6 +177,8 @@
     <Compile Include="Schemas\Vacancy\VacancyRepository.cs" />
     <Compile Include="Schemas\Vacancy\Entities\Vacancy.cs" />
     <Compile Include="Schemas\Vacancy\Entities\VacancyLocation.cs" />
+    <Compile Include="Schemas\Vacancy\VacancyRepositoryResources.cs" />
+    <Compile Include="Schemas\Vacancy\VacancySummaryRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
