RA-332: Search and view provider sites

--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -854,6 +854,8 @@
     <Content Include="Views\Admin\CreateProvider.cshtml" />
     <Content Include="Views\Admin\Provider.cshtml" />
     <Content Include="Views\Admin\CreateProviderSite.cshtml" />
+    <Content Include="Views\Admin\ProviderSites.cshtml" />
+    <Content Include="Views\Admin\ProviderSite.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
