--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -360,6 +360,9 @@
     <Compile Include="Controllers\VacancyStatusController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="IoC\VacancySourceRegistry.cs" />
+    <Compile Include="Mediators\Admin\AdminMediator.cs" />
+    <Compile Include="Mediators\Admin\AdminMediatorCodes.cs" />
+    <Compile Include="Mediators\Admin\IAdminMediator.cs" />
     <Compile Include="Mediators\Application\ITraineeshipApplicationMediator.cs" />
     <Compile Include="Mediators\Application\TraineeshipApplicationMediator.cs" />
     <Compile Include="Mediators\Application\ApprenticeshipApplicationMediator.cs" />
@@ -408,6 +411,7 @@
     <Compile Include="Validators\ContactMessageViewModelValidator.cs" />
     <Compile Include="ViewModels\Admin\ChangeUkprnViewModel.cs" />
     <Compile Include="ViewModels\Admin\TransferVacanciesViewModel.cs" />
+    <Compile Include="ViewModels\Admin\TransferVacancyViewModel.cs" />
     <Compile Include="ViewModels\AuthorizeResponseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -799,6 +803,7 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>CreateVacancy.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\VacancyPosting\SubmitVacancy.cshtml" />
     <Content Include="Views\VacancyPosting\VacancySubmitted.cshtml">
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>VacancySubmitted.generated.cs</LastGenOutput>
