--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -856,6 +856,8 @@
     <Content Include="Views\Admin\CreateProviderSite.cshtml" />
     <Content Include="Views\Admin\ProviderSites.cshtml" />
     <Content Include="Views\Admin\ProviderSite.cshtml" />
+    <Content Include="Views\Admin\ApiUsers.cshtml" />
+    <Content Include="Views\Admin\ApiUser.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
