RA-405: Implementation down to repository

--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Api\ApiBusinessCategory.cs" />
     <Compile Include="Api\ApiEmployeeType.cs" />
     <Compile Include="Api\ApiEndpoint.cs" />
+    <Compile Include="Api\ApiUser.cs" />
     <Compile Include="ICreatableEntity.cs" />
     <Compile Include="IUpdatableEntity.cs" />
     <Compile Include="Locations\GeoPoint.cs" />
